--- a/EzOrder(Cus)/View/Progress.storyboard
+++ b/EzOrder(Cus)/View/Progress.storyboard
@@ -18,8 +18,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="120" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9Fr-t9-2G6">
-                                <rect key="frame" x="0.0" y="64" width="375" height="508"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="120" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9Fr-t9-2G6">
+                                <rect key="frame" x="0.0" y="64" width="375" height="514"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="80" id="34J-5Y-jkJ">
@@ -32,9 +32,8 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8ML-2N-7PM">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8ML-2N-7PM">
                                 <rect key="frame" x="0.0" y="578" width="375" height="40"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.98723965879999998" green="0.45220696929999998" blue="0.4503938556" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -63,9 +62,14 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="8ML-2N-7PM" firstAttribute="top" secondItem="9Fr-t9-2G6" secondAttribute="bottom" id="6eb-wT-TSN"/>
                             <constraint firstItem="9Fr-t9-2G6" firstAttribute="leading" secondItem="w0r-Rf-EBp" secondAttribute="leading" id="M03-16-9se"/>
+                            <constraint firstItem="8ML-2N-7PM" firstAttribute="bottom" secondItem="w0r-Rf-EBp" secondAttribute="bottom" id="PNz-2x-LBD"/>
                             <constraint firstItem="9Fr-t9-2G6" firstAttribute="trailing" secondItem="w0r-Rf-EBp" secondAttribute="trailing" id="Zsu-5N-43I"/>
+                            <constraint firstItem="9Fr-t9-2G6" firstAttribute="height" secondItem="w0r-Rf-EBp" secondAttribute="height" multiplier="514/554" id="gHy-jg-kzT"/>
+                            <constraint firstItem="8ML-2N-7PM" firstAttribute="leading" secondItem="w0r-Rf-EBp" secondAttribute="leading" id="hJb-QE-99n"/>
                             <constraint firstItem="9Fr-t9-2G6" firstAttribute="top" secondItem="w0r-Rf-EBp" secondAttribute="top" id="jNK-5o-D1x"/>
+                            <constraint firstItem="8ML-2N-7PM" firstAttribute="trailing" secondItem="w0r-Rf-EBp" secondAttribute="trailing" id="p0T-LD-j3G"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="w0r-Rf-EBp"/>
                     </view>
