--- a/EzOrder(Cus)/View/Progress/Progress.storyboard
+++ b/EzOrder(Cus)/View/Progress/Progress.storyboard
@@ -18,8 +18,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="120" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9Fr-t9-2G6">
-                                <rect key="frame" x="0.0" y="64" width="375" height="280"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="120" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9Fr-t9-2G6">
+                                <rect key="frame" x="0.0" y="64" width="375" height="514"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="80" id="34J-5Y-jkJ">
@@ -35,9 +35,8 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8ML-2N-7PM">
                                 <rect key="frame" x="0.0" y="578" width="375" height="40"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="總共：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="czX-OF-XVb">
-                                        <rect key="frame" x="237" y="8" width="130" height="24"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="總共：" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="czX-OF-XVb">
+                                        <rect key="frame" x="305" y="8" width="62" height="24"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -45,7 +44,8 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.98723965879999998" green="0.45220696929999998" blue="0.4503938556" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="Owo-XQ-96t"/>
+                                    <constraint firstItem="czX-OF-XVb" firstAttribute="centerY" secondItem="8ML-2N-7PM" secondAttribute="centerY" id="4Oj-bH-biM"/>
+                                    <constraint firstAttribute="trailing" secondItem="czX-OF-XVb" secondAttribute="trailing" constant="8" id="pG5-f7-FHm"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -55,10 +55,6 @@
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Ev-h4-VZm">
                                 <rect key="frame" x="167" y="580" width="41" height="36"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="41" id="I0H-CU-qXD"/>
-                                    <constraint firstAttribute="height" constant="36" id="Odb-Zf-9qJ"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <state key="normal" title="結帳">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -70,15 +66,17 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="1Ev-h4-VZm" firstAttribute="centerY" secondItem="8ML-2N-7PM" secondAttribute="centerY" id="IN5-xB-x9Q"/>
                             <constraint firstItem="9Fr-t9-2G6" firstAttribute="leading" secondItem="w0r-Rf-EBp" secondAttribute="leading" id="M03-16-9se"/>
                             <constraint firstItem="8ML-2N-7PM" firstAttribute="bottom" secondItem="w0r-Rf-EBp" secondAttribute="bottom" id="PNz-2x-LBD"/>
+                            <constraint firstItem="8ML-2N-7PM" firstAttribute="top" secondItem="9Fr-t9-2G6" secondAttribute="bottom" id="ZO2-ky-a27"/>
                             <constraint firstItem="9Fr-t9-2G6" firstAttribute="trailing" secondItem="w0r-Rf-EBp" secondAttribute="trailing" id="Zsu-5N-43I"/>
-                            <constraint firstItem="9Fr-t9-2G6" firstAttribute="height" secondItem="w0r-Rf-EBp" secondAttribute="height" multiplier="514/554" id="gHy-jg-kzT"/>
                             <constraint firstItem="8ML-2N-7PM" firstAttribute="leading" secondItem="w0r-Rf-EBp" secondAttribute="leading" id="hJb-QE-99n"/>
                             <constraint firstItem="9Fr-t9-2G6" firstAttribute="top" secondItem="w0r-Rf-EBp" secondAttribute="top" id="jNK-5o-D1x"/>
                             <constraint firstItem="w0r-Rf-EBp" firstAttribute="bottom" secondItem="1Ev-h4-VZm" secondAttribute="bottom" constant="2" id="krz-5G-smc"/>
                             <constraint firstItem="8ML-2N-7PM" firstAttribute="trailing" secondItem="w0r-Rf-EBp" secondAttribute="trailing" id="p0T-LD-j3G"/>
                             <constraint firstItem="1Ev-h4-VZm" firstAttribute="centerX" secondItem="paY-sN-w9a" secondAttribute="centerX" id="qLq-ro-XCM"/>
+                            <constraint firstItem="8ML-2N-7PM" firstAttribute="height" secondItem="w0r-Rf-EBp" secondAttribute="height" multiplier="40/554" id="uTR-gY-U3i"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="w0r-Rf-EBp"/>
                     </view>
